Add WebRTC live POV streaming for remote expert assistance
- iOS WebRTC module: WebRTCClient, CustomVideoCapturer, SignalingClient,
  WebRTCSessionViewModel, WebRTCConfig
- Node.js signaling server with room-code based pairing
- Browser web viewer with bidirectional audio support
- WebRTC overlay UI with connection status and room code display
- Integration: frames forwarded from DAT SDK / iPhone camera to WebRTC
- Mutual exclusion between Gemini and WebRTC (audio session conflict)

--- a/samples/CameraAccess/CameraAccess/Secrets.swift.example
+++ b/samples/CameraAccess/CameraAccess/Secrets.swift.example
@@ -13,4 +13,8 @@ enum Secrets {
   static let openClawPort = 18789
   static let openClawHookToken = "YOUR_OPENCLAW_HOOK_TOKEN"
   static let openClawGatewayToken = "YOUR_OPENCLAW_GATEWAY_TOKEN"
+
+  // OPTIONAL: WebRTC signaling server URL (for live POV streaming)
+  // Run: cd samples/CameraAccess/server && npm install && npm start
+  static let webrtcSignalingURL = "ws://YOUR_MAC_IP:8080"
 }
