Fix BLE: try multiple service UUIDs for retrieveConnectedPeripherals, discover all services

--- a/samples/CameraAccess/CameraAccess/Info.plist
+++ b/samples/CameraAccess/CameraAccess/Info.plist
@@ -37,6 +37,16 @@
 		<true/>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>local</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
 	</dict>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>EvenClaw connects to OpenClaw AI gateway on your local network.</string>
